[package]
name = "benten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11", features=["json", "blocking"]}
serde = {version="^1.0", features=["serde_derive"]}
anyhow = "1.0.75"
tokio = { version = "1.35.1", features = ["full"]}
genpdf = { version = "0.2.0", features = ["images"] }
